tests/errors/prefix_string_01.py
def main():
    # python2 syntax should result in a syntax error
    print "Hello", "World" 
    
main()